exports[`test Github \`triangle="none"\` 1`] = `
<div
  className="github-picker"
  style={
    Object {
      "MozBorderRadius": "4px",
      "MozBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "OBorderRadius": "4px",
      "OBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "WebkitBorderRadius": "4px",
      "WebkitBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "background": "#fff",
      "border": "1px solid rgba(0,0,0,0.2)",
      "borderRadius": "4px",
      "boxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "display": "flex",
      "flexWrap": "wrap",
      "msBorderRadius": "4px",
      "msBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "padding": "5px",
      "position": "relative",
      "width": "200px",
    }
  }>
  <div
    style={
      Object {
        "border": "8px solid transparent",
        "borderBottomColor": "rgba(0,0,0,0.15)",
        "position": "absolute",
      }
    } />
  <div
    style={
      Object {
        "border": "7px solid transparent",
        "borderBottomColor": "#fff",
        "position": "absolute",
      }
    } />
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#B80000",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#B80000" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#DB3E00",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#DB3E00" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#FCCB00",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#FCCB00" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#008B02",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#008B02" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#006B76",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#006B76" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#1273DE",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#1273DE" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#004DCF",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#004DCF" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#5300EB",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#5300EB" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#EB9694",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#EB9694" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#FAD0C3",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#FAD0C3" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#FEF3BD",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#FEF3BD" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#C1E1C5",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#C1E1C5" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#BEDADC",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#BEDADC" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#C4DEF6",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#C4DEF6" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#BED3F3",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#BED3F3" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#D4C4FB",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#D4C4FB" />
    </div>
  </span>
</div>
`;

exports[`test Github \`triangle="top-right"\` 1`] = `
<div
  className="github-picker"
  style={
    Object {
      "MozBorderRadius": "4px",
      "MozBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "OBorderRadius": "4px",
      "OBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "WebkitBorderRadius": "4px",
      "WebkitBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "background": "#fff",
      "border": "1px solid rgba(0,0,0,0.2)",
      "borderRadius": "4px",
      "boxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "display": "flex",
      "flexWrap": "wrap",
      "msBorderRadius": "4px",
      "msBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "padding": "5px",
      "position": "relative",
      "width": "200px",
    }
  }>
  <div
    style={
      Object {
        "border": "8px solid transparent",
        "borderBottomColor": "rgba(0,0,0,0.15)",
        "position": "absolute",
        "right": "9px",
        "top": "-16px",
      }
    } />
  <div
    style={
      Object {
        "border": "7px solid transparent",
        "borderBottomColor": "#fff",
        "position": "absolute",
        "right": "10px",
        "top": "-14px",
      }
    } />
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#B80000",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#B80000" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#DB3E00",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#DB3E00" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#FCCB00",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#FCCB00" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#008B02",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#008B02" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#006B76",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#006B76" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#1273DE",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#1273DE" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#004DCF",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#004DCF" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#5300EB",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#5300EB" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#EB9694",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#EB9694" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#FAD0C3",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#FAD0C3" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#FEF3BD",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#FEF3BD" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#C1E1C5",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#C1E1C5" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#BEDADC",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#BEDADC" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#C4DEF6",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#C4DEF6" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#BED3F3",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#BED3F3" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#D4C4FB",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#D4C4FB" />
    </div>
  </span>
</div>
`;

exports[`test Github renders correctly 1`] = `
<div
  className="github-picker"
  style={
    Object {
      "MozBorderRadius": "4px",
      "MozBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "OBorderRadius": "4px",
      "OBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "WebkitBorderRadius": "4px",
      "WebkitBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "background": "#fff",
      "border": "1px solid rgba(0,0,0,0.2)",
      "borderRadius": "4px",
      "boxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "display": "flex",
      "flexWrap": "wrap",
      "msBorderRadius": "4px",
      "msBoxShadow": "0 3px 12px rgba(0,0,0,0.15)",
      "padding": "5px",
      "position": "relative",
      "width": "200px",
    }
  }>
  <div
    style={
      Object {
        "border": "8px solid transparent",
        "borderBottomColor": "rgba(0,0,0,0.15)",
        "left": "9px",
        "position": "absolute",
        "top": "-16px",
      }
    } />
  <div
    style={
      Object {
        "border": "7px solid transparent",
        "borderBottomColor": "#fff",
        "left": "10px",
        "position": "absolute",
        "top": "-14px",
      }
    } />
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#B80000",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#B80000" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#DB3E00",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#DB3E00" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#FCCB00",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#FCCB00" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#008B02",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#008B02" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#006B76",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#006B76" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#1273DE",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#1273DE" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#004DCF",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#004DCF" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#5300EB",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#5300EB" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#EB9694",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#EB9694" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#FAD0C3",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#FAD0C3" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#FEF3BD",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#FEF3BD" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#C1E1C5",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#C1E1C5" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#BEDADC",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#BEDADC" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#C4DEF6",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#C4DEF6" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#BED3F3",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#BED3F3" />
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}>
    <div
      style={
        Object {
          "height": "25px",
          "width": "25px",
        }
      }>
      <div
        onClick={[Function]}
        style={
          Object {
            "background": "#D4C4FB",
            "cursor": "pointer",
            "height": "100%",
            "width": "100%",
          }
        }
        title="#D4C4FB" />
    </div>
  </span>
</div>
`;

exports[`test GithubSwatch renders correctly 1`] = `
<span
  onMouseOut={[Function]}
  onMouseOver={[Function]}>
  <div
    style={
      Object {
        "height": "25px",
        "width": "25px",
      }
    }>
    <div
      onClick={[Function]}
      style={
        Object {
          "background": "#333",
          "cursor": "pointer",
          "height": "100%",
          "width": "100%",
        }
      }
      title="#333" />
  </div>
</span>
`;
